init git
remove ignore files
